--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.12.0",
+    "@emotion/styled": "^11.12.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "framer-motion": "^11.3.8",
+    "lucide-react": "^0.411.0",
+    "mongoose": "^8.5.1",
+    "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-redux": "^9.1.2",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "postcss": "^8",
